# components

./: .gitignore  CMakeLists.txt  CMakePresets.json  problem_report
Data/ConfigurationInfo/: FEOtsUDPProducerTemplateInterfaceConfigurationInfo.xml
doc/: CMakeLists.txt
otsdaq-components/: CMakeLists.txt
otsdaq-components/ControlsInterfacePlugins/: CMakeLists.txt  ControlsOtsInterface_controls.cc
otsdaq-components/DAQHardware/: CMakeLists.txt  DAQHardwareBase.cc  DAQHardwareBase.h  FSSRApplicationFirmwareBase.h  FSSRFirmware.cc  FSSRFirmware.h  FSSRFirmwareBase.cc  FSSRFirmwareBase.h  FSSRFirmwareDefinitions.h  FSSROtsFirmware.cc  FSSROtsFirmware.h  FSSRPurdueFirmware.cc  FSSRPurdueFirmware.h  FirmwareBaseDefinitions.h  FirmwareSequence.h  FrontEndFirmwareBase.cc  FrontEndFirmwareBase.h  FrontEndHardwareBase.cc  FrontEndHardwareBase.h  FrontEndHardwareTemplate.cc  FrontEndHardwareTemplate.h  OtsFirmwareCore.cc  OtsFirmwareCore.h  OtsUDPFirmware.cc  OtsUDPFirmware.h  OtsUDPFirmwareCore.cc  OtsUDPFirmwareCore.h  OtsUDPFirmwareDataGen.cc  OtsUDPFirmwareDataGen.h  OtsUDPHardware.cc  OtsUDPHardware.h  PSI46DigFirmware.cc  PSI46DigFirmware.h  PSI46DigFirmwareDefinitions.h  PurdueFirmwareCore.cc  PurdueFirmwareCore.h  VIPICFirmware.cc  VIPICFirmware.h  VIPICFirmwareDefinitions.h
otsdaq-components/DataProcessorPlugins/: CMakeLists.txt
otsdaq-components/DetectorConfiguration/: CMakeLists.txt  DACStream.cc  DACStream.h  FSSRDACsConfiguration.cc  FSSRDACsConfiguration.h  ROCDACs.h  ROCStream.h
otsdaq-components/DetectorHardware/: CMakeLists.txt  (+7 more)
ups/: product_deps
(+52 files in other folders)
